--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <h1 class="title">Huckleberry</h1>
 
           <p>
-            An avant-garde agency focused on connecting
+            An avant-garde agency focused on connecting many good people with
             <strong>passion</strong> with <strong>logistics</strong>.
           </p>
 
