--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <strong>passion</strong> with <strong>logistics</strong>.
           </p>
 
-          <p>A better way to solve the problems of tomorrow.</p>
+          <p>A better way to solve the problems of tomorrow and forever.</p>
         </div>
       </div>
     </header>
@@ -32,7 +32,7 @@
       <section class="max-width-wrapper">
         <div class="card">
           <h2 class="indented-heading">
-            Wealth comes from operations
+            Wealth comes from operations avant-garde
           </h2>
           <p>
             No modern business can thrive without developing a
