--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section class="max-width-wrapper">
         <div class="card">
           <h2 class="indented-heading">
-            Wealth comes from operations avant-garde
+            Wealth comes from operations VMVMVMVMVM
           </h2>
           <p>
             No modern business can thrive without developing a
